# cleaner-upper-rs

./: CHANGELOG.md  Cargo.toml  README.md  book.toml  config.json
.github/workflows/: docs.yml  release-plz.yml
docs/: SUMMARY.md  configuration.md  contributing.md  installation.md  introduction.md  usage.md
src/: cleanup.rs  config.rs  main.rs  scanner.rs
