[package]
name = "cleaner-upper-rs"
version = "0.1.1"
edition = "2021"
authors = ["Matt Koski <maccam912@gmail.com>"]
license = "MIT"
description = "A fast, cross-platform file system cleaner for removing recreatable folders and cache directories across different operating systems"

[dependencies]
walkdir = "2.3"
anyhow = "1.0"
rayon = "1.7"
clap = { version = "4.3", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
